BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/BMS_EMEA_Analytics__c.object
<CustomObject>
    <description>VPRO March 2014: Custom object used related to analytic snapshots</description>
    <fields>
        <fullName>Adoption_ladder_BMS_EMEA__c</fullName>
        <label>Adoption ladder</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_BMS_EMEA__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_BMS_EMEA__c</fullName>
        <label>Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_count_BMS_EMEA__c</fullName>
        <label>Record count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BMS EMEA Analytics</label>
    <nameField>
        <label>BMS EMEA Analytics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BMS EMEA Analytics</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>